# FractalStream

./: .gitignore  LANGUAGE.md  NOTES.md  README.md  stack.yaml
.github/workflows/: linux.yml  macos-intel.yml  macos.yml
examples/: arenberg-test.yaml  basic_julia.yaml  basic_mandelbrot.yaml  bulbs.yaml  circle.yaml  color-test.fs  ellipsis.yaml  exceptional_divisors.yaml  external_rays.yaml  henon.yaml  line-printer.yaml  list-test.yaml  logistic.yaml  mandelbrain.yaml  mandelbrot-bifurcations.yaml  monsieur-mathieu.yaml  newton.yaml  newton3.yaml  outline.yaml  parameter-plane.yaml  pullbacks-mating.yaml  sarah-thesis2.yaml  setup-ui-test.yaml  smooth_mandelbrot.yaml  spider.yaml  stack.yaml  tiled-mandelbrot.yaml  tool_config.yaml  twisted_mandelbrot.yaml  twisted_rabbit.yaml  very_simple_rabbit.yaml
examples/templates/: newtons-method.yaml  one-variable-complex-dynamics.yaml  one-variable-parametric-complex-dynamics.yaml  simple-complex-dynamics.yaml  simple-parametric-complex-dynamics.yaml
fractalstream-backend-llvm/: cabal.project  fractalstream-backend-llvm.cabal
fractalstream-backend-llvm/src/: Backend.hs
fractalstream-backend-llvm/src/Backend/: LLVM.hs
fractalstream-backend-llvm/src/Backend/LLVM/: Code.hs  Operand.hs  Value.hs
fractalstream-backend-llvm/test/Backend/: LLVMSpec.hs
fractalstream-backend-pure/src/: Backend.hs
fractalstream-backend-pure/src/Backend/: Pure.hs
fractalstream-core/: cabal.project  fractalstream-core.cabal
fractalstream-core/src/: Actor.hs  Event.hs  UI.hs
fractalstream-core/src/Actor/: Configuration.hs  Ensemble.hs  Event.hs  Layout.hs  Tool.hs  UI.hs  Viewer.hs
fractalstream-core/src/Actor/Viewer/: Complex.hs  Types.hs
fractalstream-core/src/Data/: Codec.hs  Color.hs  DynamicValue.hs  PNG.hs  Recursive.hs
fractalstream-core/src/Data/Indexed/: Functor.hs
fractalstream-core/src/FractalStream/: Metadata.hs  Prelude.hs  find_jemalloc.c
fractalstream-core/src/Language/: Code.hs  Draw.hs  Effect.hs  Environment.hs  Parser.hs  Type.hs  Typecheck.hs  Value.hs
fractalstream-core/src/Language/Code/: InterpretIO.hs  Parser.hs  Simulator.hs  Typecheck.hs
fractalstream-core/src/Language/Effect/: Draw.hs  List.hs  Output.hs  Provide.hs  Render.hs
fractalstream-core/src/Language/Parser/: SourceRange.hs  Tokenizer.hs
fractalstream-core/src/Language/Untyped/: Code.hs  Infer.hs  Shape.hs  Value.hs
fractalstream-core/src/Language/Value/: Derivative.hs  Evaluator.hs  Parser.hs  Transform.hs  Typecheck.hs
fractalstream-core/src/Task/: Block.hs  Concurrent.hs
fractalstream-core/test/Data/Indexed/: FunctorSpec.hs
fractalstream-core/test/Language/Code/: ParserSpec.hs
fractalstream-core/test/Language/Effect/: ListSpec.hs
fractalstream-core/test/Language/Untyped/: ShapeSpec.hs
fractalstream-core/test/Language/Value/: DerivativeSpec.hs  EvaluatorSpec.hs  ParserSpec.hs
fractalstream-metadata/: fractalstream-metadata.cabal  stack.yaml
fractalstream-opengl/: LICENSE  Setup.hs  fractalstream-opengl.cabal  stack.yaml
fractalstream-opengl/app/: Config.hs  LoadPalette.hs  LoadShaders.hs  Main.hs  Meshes.hs  Palette.hs  Shaders.hs  Viewer.hs  frag.glsl
fractalstream-opengl/examples/plane/: devaney2-2.yaml  mandelbrain.yaml  mandelbrot.yaml  parameter-Per30.glsl  parameter-per2.glsl  parameter-per3(0).glsl  parameter-quadratic.glsl  per2.yaml  per3(0).yaml  per3(0)_log.yaml  per4(0).yaml  preper2-2.yaml  quadratic.yaml  vertex.glsl
fractalstream-opengl/examples/projective/: mandelbrot.yaml
fractalstream-ui-wx/: FractalStream.desktop  Setup.hs  cabal.project  fractalstream-ui-wx.cabal  stack.yaml
fractalstream-ui-wx/src/: Main.hs
fractalstream-ui-wx/src/UI/: CodeEditor.hs  ConfigEditor.hs  Layout.hs  Menu.hs  ProjectActions.hs  ProjectEditor.hs  ProjectViewer.hs  Session.hs  Tile.hs  Welcome.hs  Widgets.hs
macos/: Info.plist
patches/: atomic-refcounts.patch  build-shared-wxc.patch  macos-fix-for-wxc.patch  macos-fix-for-wxcolour.patch  shared-llvm.patch  static-build-for-wxc.patch
