cabal-version:      3.0
name:               fractalstream-opengl

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
synopsis: OpenGL backend + WxWidgets UI for FractalStream

-- A longer description of the package.
-- description:

license:            BSD-3-Clause
license-file:       LICENSE
author:             Vinicius Ambrosi
maintainer:         viniciusambrosi@gmail.com

category:           Math
build-type:         Custom

custom-setup
  setup-depends:
    base >=4.8 && <5, Cabal, cabal-macosx

flag use-jemalloc
  description: Link against the jemalloc library
  default: False
  manual: True

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
-- extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N -fno-warn-incomplete-uni-patterns

executable fractalstream-opengl
    -- Import common warning flags.
    import:           warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    LoadShaders

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends:    base >=4.8 && <5
                    , fractalstream-core
                    , wxcore
                    , wx
                    , OpenGL
                    , bytestring

    hs-source-dirs:   app
    default-language: Haskell2010
