cabal-version:      3.0
name:               fractalstream-opengl
version:            0.1.0.0
synopsis:           OpenGL backend + WxWidgets UI for FractalStream
description:        Dynamical system visualization
license:            BSD-3-Clause
license-file:       LICENSE
author:             Vinicius Ambrosi, Matt Noonan
maintainer:         viniciusambrosi@gmail.com
copyright:          2026, Vinicius Ambrosi, Matt Noonan
category:           Math
build-type:         Custom

custom-setup
  setup-depends:
    base >=4.8 && <5, Cabal, cabal-macosx, cabal-appimage

flag use-jemalloc
  description: Link against the jemalloc library
  default: False
  manual: True

common warnings
    ghc-options: -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N -fno-warn-incomplete-uni-patterns

executable FractalStream
    import:           warnings

    main-is:          Main.hs
    
    other-modules:    LoadShaders
                      LoadPalette
                      Viewer

    build-depends:    base >=4.8 && <5
                    , fractalstream-core
                    , wxcore
                    , wx
                    , OpenGL
                    , bytestring

    hs-source-dirs:   app
    default-language: Haskell2010
